Bug 1100643: Integrate CustomCSS - endImageWrapping
Replaced this class with the more generic "cleared" where it appeared in production. We can now remove it.

--- a/media/redesign/stylus/wiki-customcss.styl
+++ b/media/redesign/stylus/wiki-customcss.styl
@@ -186,10 +186,6 @@ table#fullwidth-table td.thirdColumn {
     }
 }
 
-/* For ending "text alongside images" blocks; add this class to the first block that shouldn't be next to the image */
-.endImageWrapping {
-    clear: both;
-}
 /* Fancy Table of content for main pages of tutorial*/
 .fancyTOC {
     counter-reset: fancyTOC;
